--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
     <color name="status_bar_bg">#f1303d</color>
 
     <color name="text_main">#333333</color>
+    <color name="text_second">#666666</color>
+    <color name="text_sub">#999999</color>
 
     <color name="white">#ffffff</color>
 </resources>
