--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="text_sub">#999999</color>
 
     <color name="white">#ffffff</color>
+    <color name="tab_text_focus">#FFD600</color>
 </resources>
