--- a/app/src/main/res/menu/movie_gross.xml
+++ b/app/src/main/res/menu/movie_gross.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/menu_delete"
-        android:title="Delete"
-        android:icon="@drawable/ic_delete_white_24dp"
-        app:showAsAction="ifRoom"/>
-    <item android:id="@+id/menu_edit"
-        android:title="Edit"
-        android:icon="@drawable/ic_edit_white_24dp"
+    <item android:id="@+id/menu_date"
+        android:title="close"
+        android:icon="@drawable/ic_date_range_white_24dp"
         app:showAsAction="ifRoom"/>
     <item android:id="@+id/menu_add"
         android:title="close"
