--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,5 @@
     <color name="white">#ffffff</color>
     <color name="tab_text_focus">#FFD600</color>
     <color name="tag_rank_type">#FF375BF1</color>
+    <color name="white_bg">#efefef</color>
 </resources>
