--- a/app/src/main/res/layout/fragment_rank.xml
+++ b/app/src/main/res/layout/fragment_rank.xml
@@ -5,7 +5,8 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white_bg">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_region"
@@ -24,6 +25,42 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/rv_region"
             tools:listitem="@layout/adapter_rank_tag_type"/>
+        <LinearLayout
+            android:id="@+id/group_title"
+            android:orientation="horizontal" android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:background="@color/white"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/rv_type">
+            <TextView
+                android:id="@+id/tv_rank"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:text="周数"/>
+            <TextView
+                android:id="@+id/tv_year"
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:text="年份"/>
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="名称"/>
+            <TextView
+                android:id="@+id/tv_title_value"
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:text="票房"/>
+        </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_movies"
@@ -32,7 +69,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/rv_type"
+            app:layout_constraintTop_toBottomOf="@id/group_title"
             tools:listitem="@layout/adapter_rank_item"/>
 
     </android.support.constraint.ConstraintLayout>
