--- a/app/src/main/res/layout/fragment_edit_gross.xml
+++ b/app/src/main/res/layout/fragment_edit_gross.xml
@@ -6,6 +6,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <Spinner
+            android:id="@+id/sp_total_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="20dp"
+            android:entries="@array/gross_total_type"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/tv_title_day"
             android:layout_width="wrap_content"
@@ -122,7 +132,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="48dp"
-            android:text="isLeft"
+            android:text="Is left"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_title_gross" />
@@ -144,7 +154,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="152dp"
-            android:text="$162.524.000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/et_gross" />
 
@@ -155,8 +164,20 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/et_left_day"
+            app:layout_constraintTop_toBottomOf="@+id/cb_is_total"
             app:layout_constraintVertical_bias="1.0" />
+
+        <CheckBox
+            android:id="@+id/cb_is_total"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="48dp"
+            android:text="Is total"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sp_unit" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
