--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -13,6 +13,8 @@
         <item>North America</item>
         <item>China</item>
         <item>Oversea except China</item>
+        <item>Oversea</item>
+        <item>World Wide</item>
     </string-array>
     <string-array name="gross_unit">
         <item>万</item>
@@ -22,5 +24,9 @@
     <string-array name="gross_symbol">
         <item>$</item>
         <item>￥</item>
+    </string-array>
+    <string-array name="gross_total_type">
+        <item>Total</item>
+        <item>Opening</item>
     </string-array>
 </resources>
