--- a/app/src/main/res/drawable/selector_tag_region.xml
+++ b/app/src/main/res/drawable/selector_tag_region.xml
@@ -2,20 +2,20 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_selected="true">
         <shape>
-            <corners android:radius="17dp"/>
+            <corners android:radius="@dimen/tag_radius"/>
             <solid android:color="@color/actionbar_bg"/>
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape>
-            <corners android:radius="17dp"/>
+            <corners android:radius="@dimen/tag_radius"/>
             <solid android:color="@color/actionbar_bg"/>
         </shape>
     </item>
     <item>
         <shape>
-            <corners android:radius="17dp"/>
-            <stroke android:color="@color/actionbar_bg" android:width="1dp"/>
+            <corners android:radius="@dimen/tag_radius"/>
+            <stroke android:color="@color/divider" android:width="@dimen/divider"/>
         </shape>
     </item>
 </selector>
