--- a/app/src/main/res/layout/adapter_rank_tag_region.xml
+++ b/app/src/main/res/layout/adapter_rank_tag_region.xml
@@ -9,19 +9,19 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_height="@dimen/tag_parent_height"
         android:gravity="center_vertical"
         android:paddingLeft="5dp"
         android:paddingRight="5dp">
         <TextView
             android:id="@+id/tv_tag"
             android:layout_width="wrap_content"
-            android:layout_height="34dp"
+            android:layout_height="@dimen/tag_height"
             android:background="@drawable/selector_tag_region"
             android:textColor="@drawable/selector_tag_text"
             android:gravity="center"
-            android:paddingLeft="17dp"
-            android:paddingRight="17dp"
+            android:paddingLeft="@dimen/tag_radius"
+            android:paddingRight="@dimen/tag_radius"
             android:text="@{tag.tag}"/>
     </LinearLayout>
 </layout>
