--- a/app/src/main/res/layout/fragment_rank.xml
+++ b/app/src/main/res/layout/fragment_rank.xml
@@ -8,29 +8,67 @@
         android:layout_height="match_parent"
         android:background="@color/white_bg">
 
+        <TextView
+            android:id="@+id/tv_title_region"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/tag_parent_height"
+            android:background="@color/white"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:text="地区"
+            android:gravity="center"
+            android:textColor="@color/text_second"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_region"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/tag_parent_height"
+            android:background="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/tv_title_region"
             app:layout_constraintTop_toTopOf="parent"
             tools:listitem="@layout/adapter_rank_tag_region" />
+        <View
+            android:layout_width="0dp"
+            android:layout_height="@dimen/divider"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:background="@color/divider"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/rv_region"/>
+
+        <TextView
+            android:id="@+id/tv_title_params"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/tag_parent_height"
+            android:background="@color/white"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:text="指数"
+            android:gravity="center"
+            android:textColor="@color/text_second"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_title_region"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_type"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/tag_parent_height"
+            android:background="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/tv_title_params"
             app:layout_constraintTop_toBottomOf="@id/rv_region"
-            tools:listitem="@layout/adapter_rank_tag_type"/>
+            tools:listitem="@layout/adapter_rank_tag_region"/>
         <LinearLayout
             android:id="@+id/group_title"
             android:orientation="horizontal" android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:background="@color/white"
+            android:layout_marginTop="10dp"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:paddingLeft="10dp"
@@ -39,17 +77,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/rv_type">
             <TextView
-                android:id="@+id/tv_rank"
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
-                android:text="周数"/>
+                android:text="排名"/>
             <TextView
-                android:id="@+id/tv_year"
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:text="年份"/>
             <TextView
-                android:id="@+id/tv_name"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
