--- a/app/src/main/res/layout/adapter_movie_list.xml
+++ b/app/src/main/res/layout/adapter_movie_list.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent" android:layout_height="wrap_content">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <import type="com.king.app.gross.viewmodel.bean.MovieGridItem"/>
+        <variable
+            name="bean"
+            type="MovieGridItem"/>
+    </data>
     <android.support.v7.widget.CardView
         android:id="@+id/group_item"
         android:layout_width="match_parent"
@@ -28,6 +33,7 @@
                     android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@{bean.name}"
                     android:textSize="20dp"
                     android:textColor="@color/text_main"
                     android:gravity="center"/>
@@ -35,6 +41,7 @@
                     android:id="@+id/tv_name_sub"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@{bean.subName}"
                     android:textSize="16dp"
                     android:textColor="@color/text_second"
                     android:gravity="center"/>
@@ -42,6 +49,7 @@
                     android:id="@+id/tv_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@{bean.date}"
                     android:textSize="14dp"
                     android:textColor="@color/actionbar_bg"
                     android:gravity="center"/>
@@ -73,7 +81,7 @@
                 android:layout_width="40dp"
                 android:layout_height="25dp"
                 android:textColor="@color/white"
-                android:text="2012"
+                android:text="@{bean.flag}"
                 android:textSize="12dp"
                 android:gravity="center"
                 app:layout_constraintStart_toStartOf="parent"
@@ -83,6 +91,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
+                android:text="@{bean.gross}"
                 android:textSize="12dp"
                 android:textColor="#800080"
                 android:layout_marginBottom="5dp"
@@ -91,4 +100,5 @@
                 app:layout_constraintBottom_toBottomOf="parent"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
-</RelativeLayout>
+
+</layout>
