--- a/app/src/main/res/menu/movie_list.xml
+++ b/app/src/main/res/menu/movie_list.xml
@@ -1,20 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item android:id="@+id/menu_compare"
+        android:title="Compare"
+        android:icon="@drawable/ic_compare_white_24dp"
+        app:showAsAction="ifRoom"/>
     <item android:id="@+id/menu_sort"
         android:title="Sort"
         android:icon="@drawable/ic_sort_white_24dp"
         app:showAsAction="ifRoom"/>
-    <item android:id="@+id/menu_delete"
-        android:title="Delete"
-        android:icon="@drawable/ic_delete_white_24dp"
+    <item android:id="@+id/menu_add"
+        android:title="Add"
+        android:icon="@drawable/ic_add_white_24dp"
         app:showAsAction="ifRoom"/>
     <item android:id="@+id/menu_edit"
         android:title="Edit"
         android:icon="@drawable/ic_edit_white_24dp"
         app:showAsAction="ifRoom"/>
-    <item android:id="@+id/menu_add"
-        android:title="close"
-        android:icon="@drawable/ic_add_white_24dp"
+    <item android:id="@+id/menu_delete"
+        android:title="Delete"
+        android:icon="@drawable/ic_delete_white_24dp"
         app:showAsAction="ifRoom"/>
+    <item android:id="@+id/menu_gross_type"
+        android:title="Gross type"
+        app:showAsAction="never"/>
 </menu>
