--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="tag_height">26dp</dimen>
     <dimen name="tag_parent_height">46dp</dimen>
     <dimen name="divider">1px</dimen>
+    <dimen name="compare_movie_height">100dp</dimen>
+    <dimen name="select_movie_height">180dp</dimen>
 </resources>
