--- a/app/src/main/res/layout/fragment_rank.xml
+++ b/app/src/main/res/layout/fragment_rank.xml
@@ -2,7 +2,11 @@
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <data>
+        <variable
+            name="model"
+            type="com.king.app.gross.viewmodel.RankViewModel"/>
+    </data>
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -94,7 +98,14 @@
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:gravity="right"
-                android:text="票房"/>
+                android:text="@{model.titleValueText}"/>
+            <TextView
+                android:id="@+id/tv_title_rate"
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:visibility="@{model.titleRateVisibility}"
+                android:text="占比"/>
         </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
