--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,4 +27,5 @@
     <color name="rank_top">#ef4238</color>
     <color name="rank_second">#fcb205</color>
     <color name="rank_other">#8f9296</color>
+    <color name="transparent">#00ffffff</color>
 </resources>
