--- a/app/src/main/res/layout/fragment_gross_simple.xml
+++ b/app/src/main/res/layout/fragment_gross_simple.xml
@@ -5,16 +5,33 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <!-- fragment嵌在了viewpager里，因此LineChart会有滑动冲突，固定minXCellWidth为8dp基本上可以撑满全屏 -->
+        <com.king.app.gross.view.widget.chart.LineChart
+            android:id="@+id/chart_week"
+            android:layout_width="wrap_content"
+            android:layout_height="250dp"
+            android:paddingTop="10dp"
+            android:paddingRight="30dp"
+            app:axisXTextSize="8dp"
+            app:axisYTextSize="8dp"
+            app:axisYTextWidth="30dp"
+            app:axisXExtendLineWidth="10dp"
+            app:minXCellWidth="8dp"
+            app:valueTextSize="8dp"
+            app:lineColor="@color/actionbar_bg"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
         <LinearLayout
             android:id="@+id/group_daily"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/chart_week"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
             <TextView
@@ -53,8 +70,10 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            app:layout_constraintTop_toBottomOf="@id/chart_week"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
             <TextView
