--- a/app/src/main/res/layout/adapter_compare_item.xml
+++ b/app/src/main/res/layout/adapter_compare_item.xml
@@ -23,29 +23,9 @@
             android:layout_height="wrap_content"
             android:text="@{bean.key}"
             android:textColor="@color/text_main"/>
-        <TextView
-            android:id="@+id/tv_value1"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:textSize="12dp"
-            android:gravity="right"
-            android:paddingRight="5dp"/>
-        <TextView
-            android:id="@+id/tv_value2"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:textSize="12dp"
-            android:gravity="right"
-            android:paddingRight="5dp"/>
-        <TextView
-            android:id="@+id/tv_value3"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:textSize="12dp"
-            android:gravity="right"
-            android:paddingRight="5dp"/>
+        <com.king.app.gross.view.widget.GrossCompareLayout
+            android:id="@+id/group_compare"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
     </android.support.v7.widget.LinearLayoutCompat>
 </layout>
