--- a/app/src/main/res/layout/adapter_continent_gross.xml
+++ b/app/src/main/res/layout/adapter_continent_gross.xml
@@ -30,7 +30,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tv_market"
+            android:id="@+id/tv_index"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
