--- a/app/src/main/res/layout/activity_edit_market_gross.xml
+++ b/app/src/main/res/layout/activity_edit_market_gross.xml
@@ -3,9 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
+        <variable
+            name="model"
+            type="com.king.app.gross.viewmodel.EditMarketGrossViewModel"/>
+    </data>
+
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
         <com.king.app.jactionbar.JActionbar
             android:id="@+id/actionbar"
@@ -19,14 +26,10 @@
             app:maxShowIcon="4"
             app:iconColor="@color/white"/>
 
-        <TextView
-            android:id="@+id/tv_ref"
+        <View
+            android:id="@+id/v_head"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Select reference"
-            android:paddingLeft="16dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
+            android:layout_height="35dp"
             android:background="@color/white_bg"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -39,6 +42,65 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_ref" />
+            app:layout_constraintTop_toBottomOf="@+id/v_head" />
+
+        <TextView
+            android:id="@+id/tv_gross"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="Gross"
+            android:gravity="right"
+            app:layout_constraintBottom_toBottomOf="@+id/v_head"
+            app:layout_constraintEnd_toEndOf="@+id/v_head"
+            app:layout_constraintTop_toTopOf="@+id/v_head" />
+
+        <TextView
+            android:id="@+id/tv_ref2"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:textSize="10dp"
+            android:maxLines="2"
+            android:text="@{model.ref2MovieName}"
+            app:layout_constraintBottom_toBottomOf="@+id/v_head"
+            app:layout_constraintEnd_toStartOf="@+id/tv_gross"
+            app:layout_constraintTop_toTopOf="@+id/v_head" />
+
+        <TextView
+            android:id="@+id/tv_ref1"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:textSize="10dp"
+            android:maxLines="2"
+            android:text="@{model.ref1MovieName}"
+            app:layout_constraintBottom_toBottomOf="@+id/v_head"
+            app:layout_constraintEnd_toStartOf="@+id/tv_ref2"
+            app:layout_constraintTop_toTopOf="@+id/v_head" />
+
+        <TextView
+            android:id="@+id/tv_ref"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Select reference"
+            android:visibility="@{model.selectRefVisibility}"
+            app:layout_constraintStart_toStartOf="@id/tv_ref1"
+            app:layout_constraintEnd_toEndOf="@id/tv_ref2"
+            app:layout_constraintBottom_toBottomOf="@+id/v_head"
+            app:layout_constraintTop_toTopOf="@+id/v_head" />
+
+        <TextView
+            android:id="@+id/tv_market"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:layout_marginEnd="8dp"
+            android:text="Market"
+            app:layout_constraintBottom_toBottomOf="@+id/v_head"
+            app:layout_constraintEnd_toStartOf="@+id/tv_ref1"
+            app:layout_constraintStart_toStartOf="@+id/v_head"
+            app:layout_constraintTop_toTopOf="@+id/v_head" />
+
     </android.support.constraint.ConstraintLayout>
 </layout>
