--- a/app/src/main/res/layout/activity_edit_market_gross.xml
+++ b/app/src/main/res/layout/activity_edit_market_gross.xml
@@ -49,7 +49,7 @@
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:text="Gross"
+            android:text="Total"
             android:gravity="right"
             app:layout_constraintBottom_toBottomOf="@+id/v_head"
             app:layout_constraintEnd_toEndOf="@+id/v_head"
